updating biopic link and loc

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
    </head>
     <body>
       <h1>Leticia</h1>
-        <img src="C:\Users\lgula\OneDrive\Pictures\Camera Roll\avi2.jpg"width="15%">
+        <img src="https://photos.app.goo.gl/3EZsKaEBjD9GYvU47"width="15%">
           <ul> 
            <a href="https://github.com/lgulartem">GitHub</a></br>
            <a href="https://www.linkedin.com/in/leticiagularte/">LinkedIn</a>
           </ul>
      </body>
-        
 </html>
