changed biopic size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
     <body>
       <h1>Leticia</h1>
-        <img src="https://photos.app.goo.gl/3EZsKaEBjD9GYvU47"width="15%">
+        <img src="https://lh3.googleusercontent.com/DR5foj2vgUTv8gvex4ii0AA2v9Qt6IYrT7QeQN4xhztmLJ-gHdFoFli6xSE3nfAv_JbBq0uqnwytTy5I-kbTLw5OXW5-sO_p9xXea5T5k77y-4T5KoEwbYIGrWAjhWuaVEv8kpU06xqQzVLiZboUmBiBrsqjLdZMP1Ze4n_ct-uU28qq5fZ0m5gAx3RfYf-u_0Rx9tMyyMPSN25XJd6qxsjvTQ2IAy6CpPa-jJKlwceHuXffQiZlx5IyM7QjMzfseruAIA9Gi85V49rL4DlYPrHBGivJ3CI31OriXAjNThrGJ6HDMy1Ctjp9T30GGBohlitTqo1lwSeTXxeQp8p9u5x9OoxMERIULM4zwy517k8EDDVzfSaFOLtVPogLe5abfRWsCGsPUvSoLFrdddlLi3b_5ZFK9PmAChBVup6v-Ia4O-CxbDJHaCiixOMY4xhpxqzeYOf3nuIxzpEPYMP1MiRM-6TBEdCZV2Kmm9_iYPWX0crpIbXHgOykqn66IAjO9m8iNPOjtWw5pKhs8-_KABy-1muX_aGnoifsuTmhQz4xw-5j0qFmZRakPqloB2MIZXweg-b_nnn7Ar06bjtu5wO6IiEXNXDIK2AEKrmyIawMGb5JOc_XPIkwAtiS8mptciD4iIwH72BQ3InJxQidjRoCngAnoFmZEr1ZL1mHHK30NZaKEDdoqSjo_OEVhxBsU-nP113kbG74i6pIhtFdzJun=w678-h903-no" alt="https://photos.google.com/" style="width:187px;height:250px;border:0px;">
           <ul> 
            <a href="https://github.com/lgulartem">GitHub</a></br>
            <a href="https://www.linkedin.com/in/leticiagularte/">LinkedIn</a>
